// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> rendering should have proper snapshot 1`] = `
<div>
  <div
    className="form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="username"
        placeholder="username"
        type="text"
      />
      <input
        name="password"
        placeholder="password"
        type="text"
      />
      <button>
         Login 
      </button>
    </form>
  </div>
</div>
`;

exports[`<Register /> rendering should have proper snapshot 1`] = `
<div>
  <div
    className="form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="username"
        placeholder="username"
        type="text"
      />
      <input
        name="name"
        placeholder="name"
        type="text"
      />
      <input
        name="email"
        placeholder="email"
        type="text"
      />
      <input
        name="password"
        placeholder="password"
        type="text"
      />
      <button>
         Register 
      </button>
    </form>
  </div>
</div>
`;

exports[`<User /> should have proper snapshot 1`] = `
<div
  className="button-container"
>
  <Link
    className="button"
    to="/register"
  >
     Register 
  </Link>
  <Link
    className="button"
    to="/login"
  >
     Login 
  </Link>
</div>
`;
